Add new files to tests. Add version for Open loop. Rewrite patternShift function